# mEyeSaver-old

./: CMakeLists.txt  Controller.cpp  Controller.h  Initializer.cpp  Initializer.h  main.cpp
Models/: Settings.cpp  Settings.h
Resources/: resources.qrc
Resting/RestDialog/: RestDialog.cpp  RestDialog.h
Resting/TimerController/: TimerController.cpp  TimerController.h
Resting/TimerSettings/: TimerSettings.cpp  TimerSettings.h
SettingsController/: SettingsController.cpp  SettingsController.h
Tests/: RestingTests.cpp  RestingTests.h
Views/RestDialog/: RestDialog.cpp  RestDialog.h
Views/Tray/: TrayIcon.cpp  TrayIcon.h  TrayMenu.cpp  TrayMenu.h
Views/WelcomeWindow/: WelcomeWindow.cpp  WelcomeWindow.h
Windows/RestDialog/: RestDialog.h
